hard-gists/982ce339d5f8c9a769a0/run.log
=== Docker Run Log for 982ce339d5f8c9a769a0 ===
Started at: Mi 29. Okt 18:33:27 CET 2025

[2025-10-29 18:33:27] START: Running container for 982ce339d5f8c9a769a0
[2025-10-29 18:33:28] SUCCESS: Container 068b34a4d7d3cc6924886dd5ef6e759cf9444d6c39506766ac8aaaecc77e39ac started for 982ce339d5f8c9a769a0
=== Container logs for 982ce339d5f8c9a769a0 ===
  File "/snippet.py", line 41
    print df.head()
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 982ce339d5f8c9a769a0 ===
[2025-10-29 18:33:30] INFO: Container 068b34a4d7d3cc6924886dd5ef6e759cf9444d6c39506766ac8aaaecc77e39ac has stopped
